# more.webassets

./: HISTORY.rst  README.rst  pyproject.toml
more/webassets/tests/: test_directives.py  test_webassets.py
