[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "more.webassets"
version = "0.5.1"
dynamic = ["readme"]
description = "An opinionated Webassets integration for Morepath."
license = "BSD-3-Clause"
license-files = ["license/LICENSE"]
authors = [{name = "Seantis AG", email = "info@seantis.ch"}]
maintainers = [{name = "Henri Hulski", email = "henri@sancode.it"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.10"
dependencies = ["morepath", "ordered-set", "webassets", "webob"]

[project.urls]
Repository = "https://github.com/morepath/more.webassets"
Issues = "https://github.com/morepath/more.webassets/issues"
Changelog = "https://github.com/morepath/more.webassets/blob/master/HISTORY.rst"

[project.optional-dependencies]
test = ["libsass", "pytest >= 8", "pytest-env", "WebTest"]
coverage = ["pytest-cov"]
lint = ["black", "flake8", "flake8-pyproject"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "HISTORY.rst"]}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["more/webassets"]
addopts = ["-vv"]
env = ["RUN_ENV=test"]

[tool.coverage.run]
omit = ["more/webassets/tests/*"]
source = ["more/webassets"]

[tool.coverage.report]
show_missing = true

[tool.flake8]
show-source = true
ignore = ["E203", "E731", "W503", "N801"]
max-line-length = 88

[tool.bumpversion]
current_version = "0.5.1"
commit = true
message = "Release {new_version}"
tag = true
tag_message = "Release {new_version}"
regex = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search= 'version = "{current_version}"'
replace= 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "HISTORY.rst"
search = """
---------(?:

(?:unreleased|[0-9]+\\.[0-9]+\\.[0-9]+(:?\\.[a-z]+[0-9]*)? \\(unreleased\\))
~+)
"""
replace = """
---------

{new_version} ({now:%d.%m.%Y})
~~~~~~~~~~~~~~~~~~~
"""

[tool.tox]
requires = ["tox>=4"]
env_list = [
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
    "pypy3",
    "coverage",
    "pre-commit",
]
skip_missing_interpreters = true

[tool.tox.gh.python]
"3.10" = ["py310"]
"3.11" = ["py311"]
"3.12" = ["py312"]
"3.13" = ["py313"]
"3.14" = ["py314", "pre-commit", "coverage"]
"pypy-3.11" = ["pypy3"]

[tool.tox.env_run_base]
package = "editable"
extras = ["test"]
commands = [["pytest", "{posargs:more}"]]

[tool.tox.env.coverage]
base_python = ["python3"]
extras = ["test", "coverage"]
commands = [
    ["pytest", "--cov", "--cov-fail-under=95", "{posargs:more}"],
]

[tool.tox.env.pre-commit]
base_python = ["python3"]
package = "skip"
deps = ["pre-commit"]
commands = [
    ["pre-commit", "run", "--all-files"],
]
